using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DomainLayer.Objects.Applications
{
    public class DocumentationData : IDocumentationData
    {
        //for now i am just doing pdf formatted documents

        public DocumentationData() { }
    }
}
